rename page.css 3

--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -398,7 +398,7 @@
                               </button>
                               <div class="header__search-tabs-filter-body-guests-count">
                                 <div class="_ia55b">
-                                  <div class="_1h4ezu9">
+                                  <div class="site-content__content-menu-wrapper">
                                     <label
                                       class="input-field"
                                       for="undefined-input"
