--- a/gift.html
+++ b/gift.html
@@ -40,7 +40,7 @@
       <div dir="ltr">
         <div data-theme="" class="app-theme">
           <div>
-            <div class="_1hsn6c7">
+            <div class="h-overflow-x">
               <div style="--page-shell-max-content-width: 1472px">
                 <div class="page-shell">
                   <div class="hidden block-md">
@@ -182,7 +182,7 @@
                         <div class="lhs4qs2 dir dir-ltr"></div>
                         <div class="rqtjnlu dir dir-ltr"></div>
                       </div>
-                      <div class="_1bpiufr">
+                      <div class="resolution-body__container">
                         <div class="_dd1q8rs">
                           <div class="wvv7zel dir dir-ltr">
                             <div class="wc2uxj0 dir dir-ltr">
@@ -400,7 +400,7 @@
                     <hr class="_1xuw7us hidden" />
                     <div data-testid="payments-application"></div>
                     <div class="cb2cpz8 dir dir-ltr">
-                      <div class="_1bpiufr">
+                      <div class="resolution-body__container">
                         <div class="_cphrfs2">
                           <section>
                             <div class="t19purp2 dir dir-ltr">
