--- a/merchandising.html
+++ b/merchandising.html
@@ -51,7 +51,7 @@
                   <div class="page-shell">
                     <main id="site-content">
                       <nav
-                        class="_1tt196k"
+                        class="footer-menu__wrapper"
                         aria-hidden="false"
                         data-shared-element-id="tab-bar"
                       >
