--- a/payment.html
+++ b/payment.html
@@ -556,10 +556,10 @@
                                                         >
                                                           <div class="hidden block-xl">
                                                             <div
-                                                              class="_vysn8h0"
+                                                              class="payment-option-dropdown-pay-with"
                                                             >
                                                               <div
-                                                                class="_uh6ul55"
+                                                                class="header__logo-content"
                                                               >
                                                                 <h2
                                                                   tabindex="-1"
@@ -570,10 +570,10 @@
                                                                 </h2>
                                                               </div>
                                                               <div
-                                                                class="_1nc6ity"
+                                                                class="header__logo-img-container"
                                                               >
                                                                 <span
-                                                                  class="_huz4f0"
+                                                                  class="header__logo-img"
                                                                   ><span
                                                                     role="img"
                                                                     aria-label="Visa Card"
@@ -583,7 +583,7 @@
                                                                       height="9"
                                                                       aria-hidden="true" /></span></span
                                                                 ><span
-                                                                  class="_huz4f0"
+                                                                  class="header__logo-img"
                                                                   ><span
                                                                     role="img"
                                                                     aria-label="Mastercard"
@@ -593,7 +593,7 @@
                                                                       height="9"
                                                                       aria-hidden="true" /></span></span
                                                                 ><span
-                                                                  class="_huz4f0"
+                                                                  class="header__logo-img"
                                                                   ><span
                                                                     role="img"
                                                                     aria-label="Google Pay"
@@ -608,10 +608,10 @@
                                                           </div>
                                                           <div class="header__logo">
                                                             <div
-                                                              class="_1xkps6z"
+                                                              class="header__logo-wrapper"
                                                             >
                                                               <div
-                                                                class="_uh6ul55"
+                                                                class="header__logo-content"
                                                               >
                                                                 <h2
                                                                   tabindex="-1"
@@ -623,7 +623,7 @@
                                                               </div>
                                                               <div>
                                                                 <span
-                                                                  class="_huz4f0"
+                                                                  class="header__logo-img"
                                                                   ><span
                                                                     role="img"
                                                                     aria-label="Visa Card"
@@ -633,7 +633,7 @@
                                                                       height="9"
                                                                       aria-hidden="true" /></span></span
                                                                 ><span
-                                                                  class="_huz4f0"
+                                                                  class="header__logo-img"
                                                                   ><span
                                                                     role="img"
                                                                     aria-label="Mastercard"
@@ -643,7 +643,7 @@
                                                                       height="9"
                                                                       aria-hidden="true" /></span></span
                                                                 ><span
-                                                                  class="_huz4f0"
+                                                                  class="header__logo-img"
                                                                   ><span
                                                                     role="img"
                                                                     aria-label="Google Pay"
@@ -664,7 +664,7 @@
                                                           >
                                                           <div>
                                                             <div
-                                                              class="_fu49hrz"
+                                                              class="payment-option__described-btn-wrap"
                                                             >
                                                               <button
                                                                 id="dropdown-selector-payment_option_selector-button"
@@ -673,7 +673,7 @@
                                                                 aria-expanded="false"
                                                                 aria-haspopup="listbox"
                                                                 aria-invalid="false"
-                                                                class="_wz0818y"
+                                                                class="payment-option__described-btn"
                                                               >
                                                                 <div
                                                                   aria-disabled="false"
@@ -689,7 +689,7 @@
                                                                     >
                                                                       <div>
                                                                         <div
-                                                                          class="_18z8fput"
+                                                                          class="footer__progress-active-icon"
                                                                         >
                                                                           <svg
                                                                             xmlns="http://www.w3.org/2000/svg"
@@ -749,7 +749,7 @@
                                                                 type="hidden"
                                                                 value="0GK1hkGg1kPGJ4rea4DKyNApow5"
                                                               /><span
-                                                                class="_qcdbez"
+                                                                class="payment-option__selection-wrapper"
                                                                 ><div
                                                                   class="va-container-vv"
                                                                 >
@@ -757,7 +757,7 @@
                                                                     class="cell-middle"
                                                                   >
                                                                     <div
-                                                                      class="_wn4bip"
+                                                                      class="payment-option__selection-wrapper-icon"
                                                                       style="
                                                                         transform: rotate(
                                                                           0deg
