--- a/profile.html
+++ b/profile.html
@@ -170,7 +170,7 @@
                     </div>
                     <main id="site-content">
                       <nav
-                        class="_1tt196k hidden-md"
+                        class="footer-menu__wrapper hidden-md"
                         aria-hidden="false"
                         data-shared-element-id="tab-bar"
                       >
@@ -868,7 +868,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                 class="relative"
                                                 data-reach-combobox=""
                                               >
-                                                <div class="_1h4ezu9">
+                                                <div class="site-content__content-menu-wrapper">
                                                   <label
                                                     class="input-field"
                                                     for="location"
@@ -989,7 +989,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                             </div>
                                           </div>
                                           <div class="_1ou8uzt">
-                                            <div class="_1h4ezu9">
+                                            <div class="site-content__content-menu-wrapper">
                                               <label class="input-field" for="work"
                                                 ><div>Work</div>
                                                 <div dir="ltr">
@@ -1153,7 +1153,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                             </div>
                                             <div class="relative">
                                               <div
-                                                class="_1hsn6c7"
+                                                class="h-overflow-x"
                                                 data-testid="carousel-wrapper"
                                               >
                                                 <ul
@@ -1961,7 +1961,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                           class="relative"
                                           data-reach-combobox=""
                                         >
-                                          <div class="_1h4ezu9">
+                                          <div class="site-content__content-menu-wrapper">
                                             <label
                                               class="input-field"
                                               for="location"
@@ -2075,7 +2075,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                       </div>
                                     </div>
                                     <div class="_1ou8uzt">
-                                      <div class="_1h4ezu9">
+                                      <div class="site-content__content-menu-wrapper">
                                         <label class="input-field" for="work"
                                           ><div>Work</div>
                                           <div dir="ltr">
@@ -2230,7 +2230,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                       </div>
                                       <div class="relative">
                                         <div
-                                          class="_1hsn6c7"
+                                          class="h-overflow-x"
                                           data-testid="carousel-wrapper"
                                         >
                                           <ul
