--- a/resolutions.html
+++ b/resolutions.html
@@ -40,7 +40,7 @@
         <div data-theme="" class="app-theme">
           <div>
             <header>
-              <div class="_t4e07m">
+              <div class="header__wrapper">
                 <div class="tab__checkbox-mr-16">
                   <svg
                     viewBox="0 0 1000 1000"
@@ -61,31 +61,31 @@
                   </svg>
                 </div>
                 <ol class="place__rate-text dir dir-ltr">
-                  <li class="len26si dir dir-ltr">
+                  <li class="place__rate-text-li dir dir-ltr">
                     <span class="calendar-sideba__sched-event-time-wrapper">Send or request money - Airbnb</span>
                   </li>
                 </ol>
-                <span class="_2s36nz"
+                <span class="resolution-exit"
                   ><a href="/resolutions" class="text-link">Exit</a></span
                 >
               </div>
-              <div class="_ngr7rq" role="progressbar" aria-valuenow="20">
+              <div class="progress-bar__wrapper" role="progressbar" aria-valuenow="20">
                 <span
-                  class="_7xkl9u"
+                  class="progress-bar__wrapper-span"
                   data-dls-continuous-progress-filled=""
                   style="width: 20%"
                 ></span>
               </div>
             </header>
             <main id="site-content">
-              <div class="_1bpiufr">
+              <div class="resolution-body__container">
                 <div class="_1b2q9mig">
                   <section>
                     <h1 class="_223ai7v" id="FMP-target">
                       Send or request money - Airbnb
                     </h1>
-                    <section class="_qwh3w5">
-                      <h2 class="_zmovaf">From</h2>
+                    <section class="payment-method__section">
+                      <h2 class="payment-method__section-text">From</h2>
                       <div class="explore-filter-menu__body-content">
                         <div class="_40z4k8">
                           <div class="_1js2oqjc">
@@ -131,12 +131,12 @@
                             <div class="_lo9vot">Kuniatsu</div>
                             <div class="_10rf6ea">
                               <ol class="place__rate-text dir dir-ltr">
-                                <li class="len26si dir dir-ltr">
+                                <li class="place__rate-text-li dir dir-ltr">
                                   <span>Jun 13 - Jun 13, 2022</span>
                                 </li>
-                                <li class="len26si dir dir-ltr">
+                                <li class="place__rate-text-li dir dir-ltr">
                                   <span
-                                    class="sxjq0r dir dir-ltr"
+                                    class="navbar-header__spacer dir dir-ltr"
                                     aria-hidden="true"
                                   >
                                     • </span
@@ -150,7 +150,7 @@
                       </div>
                     </section>
                     <section class="_hmmmhsi">
-                      <h2 class="_zmovaf">What would you like to do?</h2>
+                      <h2 class="payment-method__section-text">What would you like to do?</h2>
                       <div
                         id="intent-send-money"
                         aria-disabled="false"
@@ -213,10 +213,10 @@
                         >
                       </div>
                     </section>
-                    <div class="_dj03bw">
+                    <div class="resolution__back-btn">
                       <button type="button" class="btn-link">
                         <span class="search__submit-btn-text-center"
-                          ><span class="_18eo66x"
+                          ><span class="resolution__back-btn-icon"
                             ><span
                               ><svg
                                 viewBox="0 0 32 32"
@@ -241,7 +241,7 @@
                                 </g></svg></span></span
                           ><span class="box-border">Back</span></span
                         ></button
-                      ><span class="_1wxgpj5"
+                      ><span class="resolution__sibmit-btn-wrapper"
                         ><button
                           type="button"
                           class="btn-dark"
