--- a/resolutions_2.html
+++ b/resolutions_2.html
@@ -35,7 +35,7 @@
         <div data-theme="" class="app-theme">
           <div>
             <header>
-              <div class="_t4e07m">
+              <div class="header__wrapper">
                 <div class="tab__checkbox-mr-16">
                   <svg
                     viewBox="0 0 1000 1000"
@@ -56,14 +56,14 @@
                   </svg>
                 </div>
                 <ol class="place__rate-text dir dir-ltr">
-                  <li class="len26si dir dir-ltr">
+                  <li class="place__rate-text-li dir dir-ltr">
                     <a href="/resolutions" class="text-link"
                       >Send money - Airbnb</a
                     >
                   </li>
-                  <li class="len26si dir dir-ltr">
-                    <span class="sxjq0r dir dir-ltr" aria-hidden="true"
-                      ><span class="_x4yxgi"
+                  <li class="place__rate-text-li dir dir-ltr">
+                    <span class="navbar-header__spacer dir dir-ltr" aria-hidden="true"
+                      ><span class="navbar-header__spacer-icon"
                         ><svg
                           viewBox="0 0 32 32"
                           xmlns="http://www.w3.org/2000/svg"
@@ -88,27 +88,27 @@
                     ><span class="calendar-sideba__sched-event-time-wrapper">Add details</span>
                   </li>
                 </ol>
-                <span class="_2s36nz"
+                <span class="resolution-exit"
                   ><a href="/resolutions" class="text-link">Exit</a></span
                 >
               </div>
-              <div class="_ngr7rq" role="progressbar" aria-valuenow="30">
+              <div class="progress-bar__wrapper" role="progressbar" aria-valuenow="30">
                 <span
-                  class="_7xkl9u"
+                  class="progress-bar__wrapper-span"
                   data-dls-continuous-progress-filled=""
                   style="width: 30%"
                 ></span>
               </div>
             </header>
             <main id="site-content">
-              <div class="_1bpiufr">
+              <div class="resolution-body__container">
                 <div class="_1b2q9mig">
                   <section>
                     <h1 class="_223ai7v" id="FMP-target">
                       Send money - Airbnb
                     </h1>
-                    <section class="_qwh3w5">
-                      <h2 class="_zmovaf">Send to</h2>
+                    <section class="payment-method__section">
+                      <h2 class="payment-method__section-text">Send to</h2>
                       <div class="explore-filter-menu__body-content">
                         <div class="_40z4k8">
                           <div class="_1js2oqjc">
@@ -154,12 +154,12 @@
                             <div class="_lo9vot">Kuniatsu</div>
                             <div class="_10rf6ea">
                               <ol class="place__rate-text dir dir-ltr">
-                                <li class="len26si dir dir-ltr">
+                                <li class="place__rate-text-li dir dir-ltr">
                                   <span>Jun 13 - Jun 13, 2022</span>
                                 </li>
-                                <li class="len26si dir dir-ltr">
+                                <li class="place__rate-text-li dir dir-ltr">
                                   <span
-                                    class="sxjq0r dir dir-ltr"
+                                    class="navbar-header__spacer dir dir-ltr"
                                     aria-hidden="true"
                                   >
                                     • </span
@@ -172,8 +172,8 @@
                         </div>
                       </div>
                     </section>
-                    <section class="_qwh3w5">
-                      <h2 class="_zmovaf">What is this payment for?</h2>
+                    <section class="payment-method__section">
+                      <h2 class="payment-method__section-text">What is this payment for?</h2>
                       <div>
                         <div
                           id="reason-GUEST_OFFER_DAMAGE"
@@ -276,8 +276,8 @@
                         </div>
                       </div>
                     </section>
-                    <section class="_qwh3w5">
-                      <h2 class="_zmovaf">
+                    <section class="payment-method__section">
+                      <h2 class="payment-method__section-text">
                         How much would you like to send to Kuniatsu?
                       </h2>
                       <div>
@@ -305,7 +305,7 @@
                     </section>
                     <section
                       aria-labelledby="note_to_beneficiary_label"
-                      class="_qwh3w5"
+                      class="payment-method__section"
                     >
                       <label for="note_to_responder"
                         ><div class="_1wgf3yo">
@@ -338,14 +338,14 @@
                         </div></label
                       >
                     </section>
-                    <div class="_dj03bw">
+                    <div class="resolution__back-btn">
                       <button
                         type="button"
                         class="btn-link"
                         onclick="window.location.href='resolutions.html';"
                       >
                         <span class="search__submit-btn-text-center"
-                          ><span class="_18eo66x"
+                          ><span class="resolution__back-btn-icon"
                             ><span
                               ><svg
                                 viewBox="0 0 32 32"
@@ -370,7 +370,7 @@
                                 </g></svg></span></span
                           ><span class="box-border">Back</span></span
                         ></button
-                      ><span class="_1wxgpj5"
+                      ><span class="resolution__sibmit-btn-wrapper"
                         ><button
                           type="button"
                           class="btn-dark"
