--- a/resources.html
+++ b/resources.html
@@ -206,16 +206,16 @@
                                     <div class="relative">
                                       <button
                                               type="button"
-                                              class="_84rcdk"
+                                              class="profile-reviews__logo-xl-menu"
                                               aria-haspopup="true"
                                               aria-expanded="false"
                                               aria-busy="false"
                                       >
-                                        <div class="_18lcoy3z">
-                                          <div class="_lvb55za">
+                                        <div class="profile-reviews__logo-xl-list">
+                                          <div class="profile-reviews__logo-xl-text">
                                             <div class="_12eoduj">News</div>
                                             <svg
-                                                    class="_l7gvu6"
+                                                    class="profile-reviews__logo-xl-icon"
                                                     focusable="false"
                                                     aria-hidden="true"
                                             >
@@ -237,13 +237,13 @@
                                       <a
                                         href="/help"
                                         target="_blank"
-                                        class="_84rcdk"
+                                        class="profile-reviews__logo-xl-menu"
                                         aria-busy="false"
-                                        ><div class="_18lcoy3z">
-                                          <div class="_lvb55za">
+                                        ><div class="profile-reviews__logo-xl-list">
+                                          <div class="profile-reviews__logo-xl-text">
                                             <div class="_12eoduj">Help</div>
                                             <svg
-                                              class="_l7gvu6"
+                                              class="profile-reviews__logo-xl-icon"
                                               focusable="false"
                                               aria-hidden="true"
                                             >
@@ -265,13 +265,13 @@
                                 <div class="relative">
                                   <button
                                     type="button"
-                                    class="_84rcdk"
+                                    class="profile-reviews__logo-xl-menu"
                                     aria-haspopup="true"
                                     aria-expanded="false"
                                     aria-busy="false"
                                   >
-                                    <div class="_18lcoy3z">
-                                      <div class="_lvb55za">
+                                    <div class="profile-reviews__logo-xl-list">
+                                      <div class="profile-reviews__logo-xl-text">
                                         <div class="_12eoduj">
                                           <div class="app-theme__navbar-profile-img-wrapper">
                                             <img
@@ -284,7 +284,7 @@
                                           </div>
                                         </div>
                                         <svg
-                                          class="_l7gvu6"
+                                          class="profile-reviews__logo-xl-icon"
                                           focusable="false"
                                           aria-hidden="true"
                                         >
