--- a/wishlist.html
+++ b/wishlist.html
@@ -178,7 +178,7 @@
                       </div>
                     </div>
                     <main id="site-content">
-                      <nav class="_1tt196k hidden-md" aria-hidden="false" data-shared-element-id="tab-bar">
+                      <nav class="footer-menu__wrapper hidden-md" aria-hidden="false" data-shared-element-id="tab-bar">
                         <div class="page-shell__menu">
                           <a class="page-shell__menu-item" type="button" aria-current="false" aria-disabled="false" aria-label="Explore" href="/">
                             <div class="flex">
