--- a/notifications.html
+++ b/notifications.html
@@ -49,7 +49,7 @@
                     <div class="hidden block-md"></div>
                     <main id="site-content">
                       <nav
-                        class="_1tt196k"
+                        class="footer-menu__wrapper"
                         aria-hidden="false"
                         data-shared-element-id="tab-bar"
                       >
