--- a/resolutions_pay.html
+++ b/resolutions_pay.html
@@ -123,7 +123,7 @@
                                             <div class="va-middle-vh">
                                               <div class="profile-reviews__search-input-field">
                                                 <input
-                                                  class="_oqur3jl"
+                                                  class="profile-reviews__input-koan-header"
                                                   aria-autocomplete="list"
                                                   aria-expanded="false"
                                                   autocomplete="off"
@@ -182,12 +182,12 @@
                                 <div class="relative">
                                   <a
                                     href="/become-a-host?from_nav=1"
-                                    class="_84rcdk"
+                                    class="profile-reviews__logo-xl-menu"
                                     aria-busy="false"
-                                    ><div class="_18lcoy3z">
-                                      <div class="_lvb55za">
+                                    ><div class="profile-reviews__logo-xl-list">
+                                      <div class="profile-reviews__logo-xl-text">
                                         Add listing<svg
-                                          class="_l7gvu6"
+                                          class="profile-reviews__logo-xl-icon"
                                           focusable="false"
                                           aria-hidden="true"
                                         >
@@ -203,17 +203,17 @@
                                 <div class="relative">
                                   <button
                                     type="button"
-                                    class="_84rcdk"
+                                    class="profile-reviews__logo-xl-menu"
                                     id="headerNavHostButton"
                                     aria-haspopup="true"
                                     aria-expanded="false"
                                     aria-controls="headerNavHostMenu"
                                     aria-busy="false"
                                   >
-                                    <div class="_18lcoy3z">
-                                      <div class="_lvb55za">
+                                    <div class="profile-reviews__logo-xl-list">
+                                      <div class="profile-reviews__logo-xl-text">
                                         Host<svg
-                                          class="_4yakdxf"
+                                          class="profile-reviews__logo-xl-icon-svg"
                                           focusable="false"
                                           aria-label=", Has Notifications"
                                           role="img"
@@ -231,12 +231,12 @@
                                 <div class="relative">
                                   <a
                                     href="/wishlists"
-                                    class="_84rcdk"
+                                    class="profile-reviews__logo-xl-menu"
                                     aria-busy="false"
-                                    ><div class="_18lcoy3z">
-                                      <div class="_lvb55za">
+                                    ><div class="profile-reviews__logo-xl-list">
+                                      <div class="profile-reviews__logo-xl-text">
                                         Saved<svg
-                                          class="_l7gvu6"
+                                          class="profile-reviews__logo-xl-icon"
                                           focusable="false"
                                           aria-hidden="true"
                                         >
@@ -252,13 +252,13 @@
                                 <div class="relative">
                                   <a
                                     href="/trips/v1"
-                                    class="_84rcdk"
+                                    class="profile-reviews__logo-xl-menu"
                                     aria-busy="false"
                                     data-testid="cypress-headernav-trips"
-                                    ><div class="_18lcoy3z">
-                                      <div class="_lvb55za">
+                                    ><div class="profile-reviews__logo-xl-list">
+                                      <div class="profile-reviews__logo-xl-text">
                                         Trips<svg
-                                          class="_l7gvu6"
+                                          class="profile-reviews__logo-xl-icon"
                                           focusable="false"
                                           aria-hidden="true"
                                         >
@@ -274,15 +274,15 @@
                                 <div class="relative">
                                   <button
                                     type="button"
-                                    class="_84rcdk"
+                                    class="profile-reviews__logo-xl-menu"
                                     aria-haspopup="true"
                                     aria-expanded="false"
                                     aria-busy="false"
                                   >
-                                    <div class="_18lcoy3z">
-                                      <div class="_lvb55za">
+                                    <div class="profile-reviews__logo-xl-list">
+                                      <div class="profile-reviews__logo-xl-text">
                                         Messages<svg
-                                          class="_l7gvu6"
+                                          class="profile-reviews__logo-xl-icon"
                                           focusable="false"
                                           aria-hidden="true"
                                         >
@@ -299,13 +299,13 @@
                                 <div class="relative">
                                   <a
                                     href="/help"
-                                    class="_84rcdk"
+                                    class="profile-reviews__logo-xl-menu"
                                     id="help-center-link"
                                     aria-busy="false"
-                                    ><div class="_18lcoy3z">
-                                      <div class="_lvb55za">
+                                    ><div class="profile-reviews__logo-xl-list">
+                                      <div class="profile-reviews__logo-xl-text">
                                         Help<svg
-                                          class="_l7gvu6"
+                                          class="profile-reviews__logo-xl-icon"
                                           focusable="false"
                                           aria-hidden="true"
                                         >
@@ -322,15 +322,15 @@
                                   <div class="relative">
                                     <button
                                       type="button"
-                                      class="_84rcdk"
+                                      class="profile-reviews__logo-xl-menu"
                                       id="headerNavUserButton"
                                       aria-haspopup="true"
                                       aria-expanded="false"
                                       aria-controls="headerNavUserMenu"
                                       aria-busy="false"
                                     >
-                                      <div class="_18lcoy3z">
-                                        <div class="_lvb55za">
+                                      <div class="profile-reviews__logo-xl-list">
+                                        <div class="profile-reviews__logo-xl-text">
                                           <div class="app-theme__navbar-profile-img-wrapper">
                                             <img
                                               alt="Jose Angelo’s account"
@@ -341,7 +341,7 @@
                                             />
                                           </div>
                                           <svg
-                                            class="_l7gvu6"
+                                            class="profile-reviews__logo-xl-icon"
                                             focusable="false"
                                             aria-hidden="true"
                                           >
@@ -367,7 +367,7 @@
               </div>
             </header>
             <main id="site-content">
-              <div class="_1bpiufr">
+              <div class="resolution-body__container">
                 <div class="_5702fc7">
                   <section class="_1xwopax">
                     <h1 class="_223ai7v" id="FMP-target">
@@ -458,12 +458,12 @@
                           <div class="_lo9vot">Kuniatsu</div>
                           <div class="_10rf6ea">
                             <ol class="place__rate-text dir dir-ltr">
-                              <li class="len26si dir dir-ltr">
+                              <li class="place__rate-text-li dir dir-ltr">
                                 <span>Jun 12 - Jun 12, 2022</span>
                               </li>
-                              <li class="len26si dir dir-ltr">
+                              <li class="place__rate-text-li dir dir-ltr">
                                 <span
-                                  class="sxjq0r dir dir-ltr"
+                                  class="navbar-header__spacer dir dir-ltr"
                                   aria-hidden="true"
                                 >
                                   • </span
@@ -475,17 +475,17 @@
                         </div>
                       </div>
                     </section>
-                    <section class="_1kmyg3h">
-                      <h2 class="_wruu3z">Reason</h2>
-                      <div class="_1yhtlvs">Extra services</div>
+                    <section class="amount__section">
+                      <h2 class="amount__section-text-h2">Reason</h2>
+                      <div class="amount__section-text-desc">Extra services</div>
                     </section>
-                    <section class="_1kmyg3h">
-                      <h2 class="_wruu3z">Amount</h2>
-                      <div class="_1yhtlvs">₱1 PHP</div>
+                    <section class="amount__section">
+                      <h2 class="amount__section-text-h2">Amount</h2>
+                      <div class="amount__section-text-desc">₱1 PHP</div>
                     </section>
-                    <section class="_1kmyg3h">
-                      <h2 class="_wruu3z">Note</h2>
-                      <div class="_1yhtlvs">sadas</div>
+                    <section class="amount__section">
+                      <h2 class="amount__section-text-h2">Note</h2>
+                      <div class="amount__section-text-desc">sadas</div>
                     </section>
                   </section>
                 </div>
@@ -493,7 +493,7 @@
                   <div class="_qoaox5">
                     <a href="/resolutions" class="btn-link"
                       ><span class="search__submit-btn-text-center"
-                        ><span class="_18eo66x"
+                        ><span class="resolution__back-btn-icon"
                           ><span
                             ><svg
                               viewBox="0 0 32 32"
@@ -525,7 +525,7 @@
                 </div>
               </div>
               <div class="_rcdw8v">
-                <div class="_1bpiufr"><div class="_1b2q9mig"></div></div>
+                <div class="resolution-body__container"><div class="_1b2q9mig"></div></div>
               </div>
             </main>
           </div>
